Updated description with link to github.

--- a/doc/description.tex
+++ b/doc/description.tex
@@ -13,7 +13,7 @@
 
 \section{Directory structure}
 \begin{itemize}
-	\item \texttt{src} directory contains the source code of the program which was developed for this project
+	\item \texttt{src} directory contains the source code of the program which was developed for this project. The source code is also available online on GitHub here: \href{https://github.com/alexshtf/MachineLearningCourseProject}{https://github.com/alexshtf/MachineLearningCourseProject}
 	\item \texttt{bin} directory contains a 64-bit Windows executable of the program. You may run the executable file in this directory to 'play' with the program.
 	\item \texttt{msvc\_runtime} directory contains files which have to be installed before the program is run (Visual Studio 2015 redistributable runtime). 
 	\item \texttt{matlab\_helpers} directory contains a function which can load a binary file exportable from the application for analysis and debugging.
